2013-02-13  Raymond Penners  <raymond.penners@intenct.nl>

	* socialaccount: The refresh token and token expiry time, if any,
	are now stored in `SocialToken`.

	* Added support for passing along extra parameters to the OAuth2
	authentication calls, such as `access_type` (Google) or
	`auth_type` (Facebook).

2013-02-12  Raymond Penners  <raymond.penners@intenct.nl>

	* Both the login and signup view now immediately redirect to the
	login redirect url in case the user was already authenticated.

2013-02-11  Raymond Penners  <raymond.penners@intenct.nl>

	* Added support for closing down signups in a pluggable fashion,
	making it easy to hookup your own invitation handling mechanism.

2013-02-09  Raymond Penners  <raymond.penners@intenct.nl>

	* Added support for passing along extra parameters to the
	`FB.login` API call.

2013-01-30  Raymond Penners  <raymond.penners@intenct.nl>

	* Version 0.9.0 released.

2013-01-29  Raymond Penners  <raymond.penners@intenct.nl>

	* account: `user_signed_up` signal now emits an optional
	`sociallogin` parameter so that receivers can easily differentiate
	between local and social signups.

2013-01-24  Raymond Penners  <raymond.penners@intenct.nl>

	* account: Added `email_removed` signal.

	* socialaccount: Populating of User model fields is now
	centralized in the adapter, splitting up `name` into `first_name`
	and `last_name` if these were not individually available.

2013-01-11  Raymond Penners  <raymond.penners@intenct.nl>

	* Ahmet Emre Aladağ contributed a Turkish translation, thanks!

	* socialaccount: Added SocialAccountAdapter hook to allow for
	intervention in social logins.

2013-01-07  Raymond Penners  <raymond.penners@intenct.nl>

	* google: support for Google's `verified_email` flag to determine
	whether or not to send confirmation e-mails.

2012-12-26  Raymond Penners  <raymond.penners@intenct.nl>

	* Fábio Santos contributed a Portugese translation, thanks!

2012-12-22  Raymond Penners  <raymond.penners@intenct.nl>
